# SetClockI2C

./: .gitmodules  CMakeLists.txt
src/: main.c
